--- a/Haskell/.vscode/tasks.json
+++ b/Haskell/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "runghc tda",
             "type": "shell",
-            "command": "stack runghc turtle/tda.hs",
+            "command": "runghc tda.hs",
             "problemMatcher": []
         }
     ]
